// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on mutation without query mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    __typename
  }
}
"
`;

exports[`on query then mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    ...Todo_PopulateFragment_0
    ...Todo_PopulateFragment_1
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  id
  text
  creator {
    id
    name
  }
}

fragment Todo_PopulateFragment_1 on Todo {
  text
}
"
`;

exports[`on query then mutation w/ interface return type mutation query matches snapshot 1`] = `
"mutation MyMutation {
  removeTodo {
    ...Todo_PopulateFragment_0
    ...User_PopulateFragment_0
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  id
  name
}

fragment User_PopulateFragment_0 on User {
  id
  text
}
"
`;

exports[`on query w/ fragment then mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    ...Todo_PopulateFragment_0
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  ...TodoFragment
}

fragment TodoFragment on Todo {
  id
  text
}
"
`;
